# mcp-markitdown-ui

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER_BUILD_SUMMARY.md  Dockerfile  Dockerfile.prod  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MCP_CONVERSION_SUMMARY.md  MCP_SERVER_README.md  Makefile  PDF_OCR_IMPLEMENTATION_SUMMARY.md  README.md  debug_vision_timeout.py  deployment.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  enhanced_pdf_ocr_output.md  env.example  integration_test_output.md  main.py  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-mcp.txt  simple_mcp_client.py  simple_web_app.py  test_comprehensive_pdf_ocr.py  test_enhanced_pdf_ocr_multiple_models.py  test_mcp_server.py  test_pdf_types.py  test_vision_ocr_with_ffmpeg.py  web_app.py
.github/workflows/: ci-cd-pipeline.yml  deploy.yml
docs/: api-documentation.md  deployment-guide.md  how-to-guides.md  integration-guide.md  mcp-implementation-guide.md  mcp-quick-reference.md  package-management.md  vision-ocr-guide.md  workflow-diagrams.md
docs/plans/: README.md  implementation_roadmap.md  mcp_web_ui_implementation_plan.md  phase2_summary.md  phase3_summary.md  phase4_summary.md  phase5_summary.md  phase6_summary.md  project_status.md  technical_specification.md  vision_ocr_integration_plan.md
docs/templates/: toolcard
docs/tool-cards/: README.md  convert_batch_tool.md  convert_document_tool.md  convert_file_tool.md  detect_format_tool.md  get_health_tool.md  get_root_tool.md  list_plugins_tool.md  list_supported_formats_tool.md
scripts/: deploy.bat  deploy.sh  performance-tuning.sh  production-setup.sh  security-audit.sh  setup-dev.bat  setup-dev.sh  setup-vision-ocr.sh
templates/: index.html
test/: README.md  __init__.py  conftest.py  run_tests.py
test/integration/: comprehensive_test_output.md  test_output.md
test/unit/: test_basic_imports.py  test_doc.txt  test_file.txt  test_simple.py
test/unit/old/: test_direct_conversion.py  test_enhanced_pdf_ocr.py  test_integration.py  test_pdf_direct.py  test_pdf_ocr_logic.py  test_vision_model_fallback.py  test_web_conversion.py
